<resources>
    <string name="app_name">Jot It</string>
    <string name="add_note">Add Note</string>
    <string name="note_priority">Note Priority</string>
    <string name="create_update_btn">Create Or update button</string>
    <string name="note_title">Note title</string>
    <string name="important_note">Important note</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date created</string>
    <string name="hide_completed">Hide completed</string>
    <string name="delete_completed_note">Delete all notes</string>
    <string name="note_delete">Note deleted</string>
    <string name="undo">UNDO</string>
    <string name="new_note">New note</string>
    <string name="edit_note">Edit note</string>
    <string name="confirm_delete">Confirm deletion</string>
    <string name="delete_all_msg">Do you really want to delete all completed notes?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="note_desc">Note description</string>
    <string name="title_activity_home">Home</string>
    <string name="order_title">Title</string>
    <string name="order_date">Date</string>
    <string name="order_color">Color</string>
    <string name="order_ascending">Ascending</string>
    <string name="order_descending">Descending</string>
    <string name="filter_note">Filter notes</string>
    <string name="sort_notes">Sort notes</string>
    <string name="save_note">Save Note</string>
    <string name="sad_face">📓</string>
    <string name="notes_empty_text">Nothing to see. Add Notes</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_signup_btn">Don\'t have an account? Signup</string>
    <string name="top_bar_menu">Menu</string>
</resources>