<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/sort_by_name"/>

            <item
                android:id="@+id/action_sort_date"
                android:title="@string/sort_by_date"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_hide_completed_tasks"
        android:checkable="true"
        app:showAsAction="never"
        android:title="@string/hide_completed"/>

    <item
        android:id="@+id/action_delete_completed_tasks"
        android:title="@string/delete_completed_note"
        app:showAsAction="never"/>

</menu>