<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.addeditnote.AddEditNoteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_8">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@null"
                android:cursorVisible="true"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/note_title"
                android:inputType="textCapSentences"
                android:maxLength="60"
                android:maxLines="3"
                android:padding="@dimen/dp_12"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/title_text_color"
                android:textColorHint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill"
                />

            <CheckBox
                android:id="@+id/check_box_important"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/important_note"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_title_et"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_desc_et"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="@null"
                android:lineSpacingExtra="5dp"
                android:inputType="textCapSentences|textMultiLine"
                android:gravity="start"
                android:hint="@string/note_desc"
                android:padding="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_64"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_title_et" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/dp_16"
        android:contentDescription="@string/create_update_btn"
        android:src="@drawable/ic_check_mark"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>